--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@data-driven-forms/react-form-renderer": "^3.18.5",
     "@data-driven-forms/pf4-component-mapper": "^3.18.5",
+    "@data-driven-forms/react-form-renderer": "^3.18.5",
     "@mswjs/data": "^0.8.4",
     "@patternfly/patternfly": "^4.202.1",
     "@patternfly/react-core": "^4.224.1",
+    "@patternfly/react-table": "^4.93.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
